k8s/orders-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - image: idiordiev/online-shop-orders-service
          imagePullPolicy: Always
          name: orders-service
          ports:
            - containerPort: 8080
