k8s/orders-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  ports:
    - port: 80         
      targetPort: 80
  selector:
    app: orders-service
